<resources>
    <string name="app_name">UNAERP-Desafio-5-Etapa</string>
    <string name="app_image_description">Logo do aplicativo</string>
    <string name="login_message">Entre com sua Conta</string>
    <string name="cadastro_message">Cadastre sua Conta</string>
    <string name="create_account_message">Não possui conta? Cadastre aqui</string>
    <string name="login_account_message">Já possui conta? Entre aqui</string>
    <string name="perfil_title">Meu Perfil</string>
    <string name="input_mail">E-Mail</string>
    <string name="input_name">Nome</string>
    <string name="input_password">Senha</string>
    <string name="login_button">ENTRAR</string>
    <string name="cadastro_button">CADASTRAR</string>
    <string name="salvar_button">SALVAR</string>
    <string name="cancelar_button">CANCELAR</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>