<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="16dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/appLogo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/app_image_description"
            android:src="@drawable/app_logo" />

        <TextView
            android:id="@+id/cadastro_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/appLogo"
            android:layout_marginStart="10.5dp"
            android:layout_marginTop="20dp"
            android:text="@string/cadastro_message" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cadastro_message"
            android:layout_marginTop="10dp"
            android:hint="@string/input_name"
            android:paddingHorizontal="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/mail_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name_layout"
            android:layout_marginTop="16dp"
            android:hint="@string/input_mail"
            android:paddingHorizontal="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/mail_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mail_layout"
            android:layout_marginTop="16dp"
            android:hint="@string/input_password"
            android:paddingHorizontal="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_marginTop="16dp"
            android:layout_centerHorizontal="true"
            android:id="@+id/tipo_conta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password_layout"
            android:hint="Tipo de conta" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/toggleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tipo_conta"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            app:singleSelection="true">

            <Button
                android:id="@+id/interessado_button"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Interessado" />

            <Button
                android:id="@+id/anunciante_button"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Anunciante" />
        </com.google.android.material.button.MaterialButtonToggleGroup>

        <Button
            android:background="@drawable/button_rounded"
            android:id="@+id/cadastro_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toggleButton"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="16dp"
            android:hint="CRIAR CONTA" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cadastro_button"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/button_rounded"
            android:hint="LOGIN" />

    </RelativeLayout>

</RelativeLayout>